# test_stm32f3discovery

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.zig
.config/openocd/: danik.cfg  danik_pink.cfg  eugene.cfg  j_link.cfg  stm32f3disco_A210501873.cfg  stm32f3disco_A210503988.cfg  valera_blue1.cfg  valera_blue2.cfg  valera_pink.cfg
cmake/: arm-none-eabi-gcc.cmake  freertos.cmake  helper.cmake
platform/stm32f3discovery/: stm32f3discovery_flash.ld  system.cpp  system.h
src/: gpio.cpp  gpio.h  main.cpp  syscalls.c  usart.cpp  usart.h
src/freertos/: FreeRTOSConfig.h  hooks.c
src/system/: system.cpp  system.h
